== 1.1 2008-11-09

* Refactored code to allow simple aliasing
* Configurable connector deprecated (and removed) in favor of jShoulda.setShouldAlias method.
* new global simbol: jShoulda
* global methods `should` and `context` are now created through aliasing
* Try this, babe

    jShoulda.setContextAlias('describe').setShouldAlias('it', '');
    describe("A context", {},
      it("runs tests", function() {
        this.assert(true);
      })
    )();

== 1.0.1 2008-10-31

* Configurable connector. Overwrite `should.connector` if you want to use a localized connector.

== 1.0 2008-10-18

* Version set to 1.0, no code changes

== 0.0.3 2008-10-11

* Proven to work with the original Prototype unittest.js

== 0.0.2 2008-10-07

* Now the root context invocation returns a Test.Runner instance

== 0.0.1 2008-10-05

* 1 major enhancement:
  * Initial release